--- a/public/IMC/IMC.html
+++ b/public/IMC/IMC.html
@@ -16,12 +16,12 @@
             var N1 = parseFloat(campo1.value) /((parseFloat(campo2.value)*parseFloat(campo2.value))/10000)
             var n2 = Math.round(N1*10)/10
             if (n2 == NaN){ resultado.innerText = "Calcular o IMC"}
-            else{if (n2<= 18){resultado.innerText = "abaixo do peso"}
-            else{if (n2> 18 && n2<=25){resultado.innerText = "ideal"}
-            else{if (n2> 25 && n2<=30){resultado.innerText = "sobrepeso"}
-            else{if (n2> 30 && n2<=35){resultado.innerText = "obesidade 1"}
-            else{if (n2> 35 && n2<=40){resultado.innerText = "obesidade 2"}
-            else{if (n2> 40){resultado.innerText = "obesidade 3"}
+            else{if (n2<= 18){resultado.innerText = "Abaixo do peso"}
+            else{if (n2> 18 && n2<=25){resultado.innerText = "Ideal"}
+            else{if (n2> 25 && n2<=30){resultado.innerText = "Sobrepeso"}
+            else{if (n2> 30 && n2<=35){resultado.innerText = "Obesidade 1"}
+            else{if (n2> 35 && n2<=40){resultado.innerText = "Obesidade 2"}
+            else{if (n2> 40){resultado.innerText = "Obesidade 3"}
             }}}}}}
             
             }
