--- a/public/maior-menor/maior-menor.html
+++ b/public/maior-menor/maior-menor.html
@@ -26,8 +26,16 @@
 </head>
 <body>
     <h1>Calculadora Maior</h1><br>
-    <div> <input type="number" id="n01" placeholder="Número 01" ></div>
-    <div> <input type="number" id="n02" placeholder="Número 02"></div>
-    <div><button onclick="maior()"> Maior</button></div>
+    <div class="n1" >
+        <label>Número 01</label><br>
+        <input id="n01" type="number" >
+    </div>
+    <div class="n2" >
+        <label>Número 02 </label><br> 
+        <input id="n02"  type="number" >
+    </div>
+    <div class="input"> 
+        <input type="button" onclick="maior()" value="Maior">
+    </div>
 </body>
 </html>
